--- a/data/countries/de/data.yaml
+++ b/data/countries/de/data.yaml
@@ -42,7 +42,7 @@ type: PERSON
 country: DE
 name: Ska Keller
 family_name: Keller
-given_name: Ska
+given_name: Franziska
 urls:
   - type: WEBSITE
     url: https://www.skakeller.de/
@@ -52,7 +52,7 @@ urls:
     url: https://www.facebook.com/SkaKellerMEP/
   - type: INSTAGRAM
     url: https://www.instagram.com/skakeller/
-  - type: WIKIPEDIA
-    url: https://de.wikipedia.org/wiki/Ska_Keller
+  - type: WIKIDATA
+    url: https://www.wikidata.org/wiki/Q71528
 emails:
   - address: ska.keller@europarl.europa.eu
