--- a/data/countries/de/he/marburg-biedenkopf/data.yaml
+++ b/data/countries/de/he/marburg-biedenkopf/data.yaml
@@ -8,7 +8,7 @@ urls:
   - type: WEBSITE
     url: https://www.gruene-marburg.de/
   - type: FACEBOOK
-    url: https://www.facebook.com/B%C3%BCndnis-90Die-Gr%C3%BCnen-Marburg-1608668002754517/
+    url: https://www.facebook.com/DieGruenen.Marburg/
 emails:
   - address: kreisverband@gruene-marburg.de
 ---
