Update URL for Pleidelsheim (#122)

--- a/data/countries/de/bw/ludwigsburg/data.yaml
+++ b/data/countries/de/bw/ludwigsburg/data.yaml
@@ -157,7 +157,7 @@ state: Baden-Württemberg
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.ogl-pleidelsheim.de/
+    url: https://xn--offene-grne-liste-pleidelsheim-dfd.de/
 ---
 city: Sachsenheim
 country: DE
