Schöppingen: Removed website URL, added email (#141)
Source: https://gruene-kv-borken.de/ortsverbaende/

--- a/data/countries/de/nw/borken/data.yaml
+++ b/data/countries/de/nw/borken/data.yaml
@@ -97,9 +97,8 @@ district: Borken
 level: DE:ORTSVERBAND
 state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
-urls:
-  - type: WEBSITE
-    url: http://www.gruene-schoeppingen.de/
+emails:
+  - address: m.runge@wmw.de
 ---
 city: Stadtlohn
 country: DE
