--- a/data/countries/de/nw/minden-luebbecke/data.yaml
+++ b/data/countries/de/nw/minden-luebbecke/data.yaml
@@ -8,7 +8,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://xn--grne-milk-r9a.de/
+    url: https://xn--grne-milk-r9a.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneMiLk
 ---
@@ -30,7 +30,7 @@ state: Nordrhein-Westfalen
 type: REGIONAL_CHAPTER
 urls:
   - type: WEBSITE
-    url: http://www.gruene-milk.de/
+    url: https://gruene-espelkamp.de/
 ---
 city: Hille
 country: DE
