Fix URL to use canonical one

--- a/data/countries/de/by/schweinfurt/data.yaml
+++ b/data/countries/de/by/schweinfurt/data.yaml
@@ -8,7 +8,7 @@ emails:
   - address: info@gruene-schweinfurt.de
 urls:
   - type: WEBSITE
-    url: https://gruene-schweinfurt.de/
+    url: https://www.gruene-schweinfurt.de/
 ---
 type: YOUTH_ORGANIZATION
 level: DE:KREISVERBAND
