Adding OV to Aschaffenburg-Land (#148)

--- a/data/countries/de/by/aschaffenburg-land/data.yaml
+++ b/data/countries/de/by/aschaffenburg-land/data.yaml
@@ -39,3 +39,53 @@ urls:
     url: https://gruene-kleinostheim.de/
   - type: FACEBOOK
     url: https://www.facebook.com/GrueneKleinostheim
+---
+city: Bessenbach
+country: DE
+district: Aschaffenburg-Land
+level: DE:ORTSVERBAND
+state: Bayern
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-bessenbach.de/
+---
+city: Goldbach
+country: DE
+district: Aschaffenburg-Land
+level: DE:ORTSVERBAND
+state: Bayern
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: https://gruene-goldbach.com/
+---
+city: Hösbach
+country: DE
+district: Aschaffenburg-Land
+level: DE:ORTSVERBAND
+state: Bayern
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: http://www.gruene-hoesbach.de/
+---
+city: Karlstein
+country: DE
+district: Aschaffenburg-Land
+level: DE:ORTSVERBAND
+state: Bayern
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: https://www.gruene-karlstein.de/
+---
+city: Schöllkrippen
+country: DE
+district: Aschaffenburg-Land
+level: DE:ORTSVERBAND
+state: Bayern
+type: REGIONAL_CHAPTER
+urls:
+  - type: WEBSITE
+    url: https://www.gruene-schoellkrippen.de/
