Add emails to some KV (#151)

--- a/data/countries/de/bb/oder-spree/data.yaml
+++ b/data/countries/de/bb/oder-spree/data.yaml
@@ -6,7 +6,9 @@ state: Brandenburg
 district: Oder-Spree
 urls:
   - type: WEBSITE
-    url: https://www.gruene-oder-spree.de/
+    url: https://gruene-oder-spree.de/
+emails:
+  - address: post@gruene-oder-spree.de
 ---
 type: REGIONAL_CHAPTER
 level: DE:ORTSVERBAND
