--- a/data/countries/de/bw/bodenseekreis/data.yaml
+++ b/data/countries/de/bw/bodenseekreis/data.yaml
@@ -2,7 +2,7 @@
 country: DE
 district: Bodenseekreis
 emails:
-  - address: sabine.witzigmann@gruene-bodenseekreis.de
+  - address: info@gruene-bodenseekreis.de
 level: DE:KREISVERBAND
 state: Baden-Württemberg
 type: REGIONAL_CHAPTER
