--- a/data/countries/de/bw/boeblingen/data.yaml
+++ b/data/countries/de/bw/boeblingen/data.yaml
@@ -3,6 +3,7 @@ country: DE
 district: Böblingen
 emails:
   - address: kv.boeblingen@gruene.de
+  - address: info@gruene-boeblingen.de
 level: DE:KREISVERBAND
 state: Baden-Württemberg
 type: REGIONAL_CHAPTER
