--- a/data/countries/de/bw/calw/data.yaml
+++ b/data/countries/de/bw/calw/data.yaml
@@ -3,6 +3,7 @@ country: DE
 district: Calw
 emails:
   - address: kv.calw@gruene.de
+  - address: kreisgeschaeftsstelle@gruene-kreis-calw.de
 level: DE:KREISVERBAND
 state: Baden-Württemberg
 type: REGIONAL_CHAPTER
