--- a/data/countries/de/bw/ettlingen/data.yaml
+++ b/data/countries/de/bw/ettlingen/data.yaml
@@ -3,6 +3,7 @@ country: DE
 district: Ettlingen
 emails:
   - address: kv.ettlingen@gruene.de
+  - address: andreas.perrin@gruene-ettlingen.de
 level: DE:KREISVERBAND
 state: Baden-Württemberg
 type: REGIONAL_CHAPTER
