fix or remove social media links

--- a/data/countries/de/bb/data.yaml
+++ b/data/countries/de/bb/data.yaml
@@ -31,7 +31,7 @@ urls:
   - type: FACEBOOK
     url: https://www.facebook.com/GJBBG/
   - type: TWITTER
-    url: https://twitter.com/gj__bw/
+    url: https://twitter.com/gj__bb/
   - type: INSTAGRAM
     url: https://www.instagram.com/gruene_jugend_brandenburg/
 emails:
