--- a/data/countries/de/bw/breisgau-hochschwarzwald/data.yaml
+++ b/data/countries/de/bw/breisgau-hochschwarzwald/data.yaml
@@ -10,7 +10,7 @@ urls:
   - type: WEBSITE
     url: https://gruene-breisgau-hochschwarzwald.de/
   - type: FACEBOOK
-    url: https://www.facebook.com/Bundnis90DieGrunenKvBreisgauHochschwarzwald/
+    url: https://www.facebook.com/gruene.breisgau.hochschwarzwald/
 ---
 city: Gundelfingen
 country: DE
